<resources>
    <string name="app_name">Tasks</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="login_fragment">LoginFragment</string>
    <string name="splash_fragment">SplashFragment</string>
    <string name="forgot_password_fragment">ForgotPasswordFragment</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="username">Email</string>
    <string name="title">Titulo</string>
    <string name="description">Descrição</string>
    <string name="date_txt">Data de expiração Ex: (11/04/2023)</string>
    <string name="hour_txt">Hora de expiração</string>
    <string name="ou_acesse_com_o_google_login">Ou</string>
    <string name="n_o_tem_conta_cadastre_se_aqui">Não tem conta? <b><i>cadastre-se aqui</i></b></string>
    <string name="not_warning_forgot_password">Não se preocupe, iremos enviar um e-mail de confirmação.</string>
    <string name="forgot_password">Esqueceu a senha? <b><i>Redefina aqui</i></b></string>
    <string name="login">Login</string>
    <string name="forgot_password_btn">Redefinir Senha</string>
    <string name="btn_update_profile">Atualizar Perfil</string>
    <string name="btn_salve_profile">Salvar Perfil</string>
    <string name="btn_save_task">Salvar Tarefa</string>
    <string name="register">SingUp</string>
    <string name="entrar_com_google">Entrar com google</string>
    <string name="entrar_com_o_google">Entrar com o Google</string>
    <string name="meu_dia">Meu Dia</string>
    <string name="description_home">Terça Feira, Fevereiro 13</string>
    <string name="remover_tarefas">Remover Tarefas</string>
    <string name="listar_favoritos">Listar Favoritos</string>
    <string name="listar_tarefas">Listar Todas Tarefas</string>
    <string name="adicionar_tarefa">Adicionar Tarefa</string>
    <string name="favoritar_tarefa">Favoritar Tarefa</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_label_task">Tarefa</string>

    <string name="menu_home">Perfil</string>
    <string name="menu_fav_tasks">Listar Favoritos</string>
    <string name="menu_add_tasks">Adicionar Tarefas</string>
    <string name="menu_detail_task">Detalhe Tarefa</string>
    <string name="tarefas_favoritas">Tarefas Favoritas</string>
    <string name="tarefas">Tarefas</string>
    <string name="desire_task">Deseja favoritar esta tarefa?</string>
    <string name="crit">Criticidade</string>
</resources>