<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_splash">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".login.presentation.LoginFragment">


            <ImageView
                android:id="@+id/image_logo_login"
                android:layout_width="0dp"
                android:layout_height="@dimen/image_logo_login"
                android:layout_marginStart="50dp"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/notepadlogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="36dp"
                android:layout_marginRight="36dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_logo_login">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edt_username"
                    style="@style/NotepadEditText"
                    android:hint="@string/username"
                    app:boxBackgroundColor="@color/white"
                    app:startIconDrawable="@drawable/baseline_account_circle_24"
                    app:startIconTint="#000000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edt_password"
                    style="@style/NotepadEditText"
                    android:layout_below="@id/edt_username"
                    android:hint="@string/password"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/baseline_lock_24"
                    app:startIconTint="#000000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edt_password_confirm"
                    style="@style/NotepadEditText"
                    android:layout_below="@id/edt_password"
                    android:hint="@string/cpassword"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/baseline_lock_24"
                    app:startIconTint="#000000">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    style="@style/NotepadButton"
                    android:layout_below="@+id/edt_password_confirm"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/gradient_notepad_button"
                    android:textColor="@color/white"
                    android:text="@string/register" />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>
