<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.presentation.ui.profilepicture.ProfilePictureFragment">


    <RelativeLayout
        android:id="@+id/profilePictureLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#4169E1"
        app:layout_constraintBottom_toTopOf="@id/cardView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/avatarprofile" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:text="Osvaldo Airon"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:text="Osvaldo Airon" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:elevation="24dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@id/relativeLayoutCenter"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilePictureLayout"
        tools:layout_editor_absoluteY="182dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearTasks"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_weight="0.5"
                    android:text="@string/tarefas_favoritas" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/tarefas" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_weight="0.5"
                    android:id="@+id/txt_fav_tasks"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    tools:text="55" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="54dp"
                    android:layout_weight="0.5"
                    android:id="@+id/txt_all_tasks"
                    tools:text="220" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/relativeLayoutCenter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="0.3"
                android:src="@drawable/baseline_email_24" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_centerInParent="true"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.7"
                android:text="osvaldo.airon@dcx.ufpb.br"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="osvaldo.airon@dcx.ufpb.br" />
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/btn_update_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>